--- a/package.json
+++ b/package.json
@@ -1,11 +1,41 @@
 {
   "name": "site-builder",
-  "version": "0.0.1",
+  "version": "0.0.0",
   "description": "Static site builder",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "grunt test"
   },
-  "author": "",
-  "license": "MIT"
+  "author": {
+    "name": "mygov.scot team",
+    "email": "martin.ellis@scotland.gsi.gov.uk",
+    "url": "http://inside.mygovscot.org/"
+  },
+  "license": "MIT",
+  "dependencies": {
+    "assemble-handlebars": "^0.3.0",
+    "config-weaver": "0.0.12",
+    "cookie-parser": "^1.3.5",
+    "express": "^4.13.1",
+    "express-logger": "0.0.3",
+    "fs-extra": "^0.22.1",
+    "marked": "^0.3.3",
+    "node-watch": "^0.3.4",
+    "node.extend": "^1.1.5",
+    "restler": "^3.3.0"
+  },
+  "devDependencies": {
+    "base64-stream": "^0.1.2",
+    "cheerio": "^0.19.0",
+    "grunt": "^0.4.5",
+    "grunt-jasmine-node": "^0.3.1",
+    "grunt-contrib-copy": "^0.8.0",
+    "grunt-istanbul": "^0.6.1",
+    "grunt-jasmine-node": "^0.3.1",
+    "load-grunt-config": "^0.17.2",
+    "phantom-render-stream": "^1.7.1"
+  },
+  "publishConfig": {
+    "registry": "http://repo.digital.gov.uk/nexus/content/repositories/npm/"
+  }
 }
