--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
     "config-weaver": "0.0.12",
     "cookie-parser": "^1.3.5",
     "express": "^4.13.1",
+    "express-handlebars": "^2.0.0",
     "express-logger": "0.0.3",
     "fs-extra": "^0.22.1",
+    "js-yaml": "3.0.2",
     "marked": "^0.3.3",
     "node-watch": "^0.3.4",
     "node.extend": "^1.1.5",
-    "restler": "^3.3.0"
+    "restler": "^3.3.0",
+    "shelljs": "^0.4.0"
   },
   "devDependencies": {
     "base64-stream": "^0.1.2",
