--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "MIT",
   "dependencies": {
     "assemble-handlebars": "^0.3.0",
+    "async": "^0.9.0",
     "cheerio": "^0.19.0",
     "config-weaver": "0.0.12",
     "cookie-parser": "^1.3.5",
@@ -26,7 +27,8 @@
     "node-watch": "^0.3.4",
     "node.extend": "^1.1.5",
     "restler": "^3.3.0",
-    "shelljs": "^0.4.0"
+    "shelljs": "^0.4.0",
+    "simplecrawler-referrer-filter": "^0.3.1-1.1"
   },
   "devDependencies": {
     "base64-stream": "^0.1.2",
