--- a/package.json
+++ b/package.json
@@ -18,17 +18,22 @@
     "cheerio": "^0.19.0",
     "config-weaver": "0.0.12",
     "cookie-parser": "^1.3.5",
+    "dateformat": "^1.0.11",
+    "del": "^1.1.1",
     "express": "^4.13.1",
     "express-handlebars": "^2.0.0",
     "express-logger": "0.0.3",
     "fs-extra": "^0.22.1",
     "js-yaml": "3.0.2",
     "marked": "^0.3.3",
+    "needle": "^0.9.1",
     "node-watch": "^0.3.4",
     "node.extend": "^1.1.5",
+    "optimist": "^0.6.1",
     "restler": "^3.3.0",
     "shelljs": "^0.4.0",
-    "simplecrawler-referrer-filter": "^0.3.1-1.1"
+    "simplecrawler-referrer-filter": "^0.3.1-1.1",
+    "xml2js": "^0.4.5"
   },
   "devDependencies": {
     "base64-stream": "^0.1.2",
