--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express-logger": "0.0.3",
     "fs-extra": "^0.22.1",
     "js-yaml": "3.0.2",
+    "json-stable-stringify": "^1.0.0",
     "marked": "^0.3.3",
     "needle": "^0.9.1",
     "node-watch": "^0.3.4",
