--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,11 @@
-node_modules
 *.iml
-out
+*.deb
 .sonar
+debian/changelog
+debian/files
+debian/site-builder
+debian/site-builder.debhelper.log
+debian/site-builder.substvars
+node_modules
 npm-debug.log
+out
