--- a/package.json
+++ b/package.json
@@ -24,9 +24,10 @@
     "express-handlebars": "^2.0.0",
     "express-logger": "0.0.3",
     "fs-extra": "^0.22.1",
+    "grunt": "^0.4.5",
     "js-yaml": "3.0.2",
     "json-stable-stringify": "^1.0.0",
-    "marked": "^0.3.3",
+    "marked": "0.3.3",
     "needle": "^0.9.1",
     "node-watch": "^0.3.4",
     "node.extend": "^1.1.5",
@@ -39,7 +40,6 @@
   "devDependencies": {
     "base64-stream": "^0.1.2",
     "body-parser": "^1.10.2",
-    "grunt": "^0.4.5",
     "grunt-contrib-copy": "^0.8.0",
     "grunt-istanbul": "^0.6.1",
     "grunt-jasmine-node": "^0.3.1",
