--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "grunt-sonar-runner": "^2.3.1",
     "load-grunt-config": "^0.17.2",
     "phantom-render-stream": "^1.7.1",
+    "slug": "^0.9.1",
     "temp": "^0.8.1"
   },
   "publishConfig": {
