--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "restler": "^3.3.0",
     "shelljs": "^0.4.0",
     "simplecrawler-referrer-filter": "^0.3.1-1.1",
+    "slug": "^0.9.1",
     "xml2js": "^0.4.5",
     "yfm": "^0.2.0"
   },
