--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.13.1",
     "express-handlebars": "^2.0.0",
     "express-logger": "0.0.3",
+    "fast-csv": "^1.0.0",
     "fs-extra": "^0.22.1",
     "glob": "^5.0.15",
     "grunt": "^0.4.5",
