--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
     "restler": "^3.3.0",
     "simplecrawler-referrer-filter": "^0.3.1-1.1",
     "slug": "^0.9.1",
-    "xml2js": "^0.4.5",
     "yfm": "^0.2.0"
   },
   "devDependencies": {
@@ -45,7 +44,8 @@
     "grunt-jasmine-node": "^0.3.1",
     "grunt-sonar-runner": "^2.4.5",
     "load-grunt-config": "^0.19.1",
-    "temp": "^0.8.1"
+    "temp": "^0.8.1",
+    "xml2js": "^0.4.16"
   },
   "publishConfig": {
     "registry": "http://repo.digital.gov.uk/nexus/content/repositories/npm/"
