MGS-1146 BUG Fix preview running in VM doesn't reload when files are updated on host

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.13.4",
     "fast-csv": "^1.1.0",
     "fs-extra": "^0.26.7",
+    "gaze": "^1.0.0",
     "glob": "^7.0.3",
     "grunt": "^0.4.5",
     "handlebars": "^4.0.5",
@@ -27,7 +28,6 @@
     "json-stable-stringify": "^1.0.1",
     "marked": "^0.3.3",
     "needle": "^1.0.0",
-    "node-watch": "^0.3.5",
     "node.extend": "^1.1.5",
     "optimist": "^0.6.1",
     "restler": "^3.4.0",
