MGS-1240 Added amphora proxy and preview support for publications.

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "config-weaver": "0.0.15",
     "cookie-parser": "^1.4.1",
     "express": "^4.13.4",
+    "express-http-proxy": "^0.6.0",
     "fast-csv": "^1.1.0",
     "fs-extra": "^0.26.7",
     "gaze": "^1.0.0",
