--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "glob": "^7.0.5",
     "grunt": "^0.4.5",
     "handlebars": "^4.0.5",
-    "js-yaml": "3.0.2",
+    "js-yaml": "^3.6.1",
     "json-stable-stringify": "^1.0.1",
     "marked": "^0.3.3",
     "needle": "^1.0.0",
