--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "fs-extra": "^0.30.0",
     "gaze": "^1.0.0",
     "glob": "^7.0.5",
-    "grunt": "^0.4.5",
     "handlebars": "^4.0.5",
     "js-yaml": "^3.6.1",
     "json-stable-stringify": "^1.0.1",
@@ -39,6 +38,7 @@
   },
   "devDependencies": {
     "body-parser": "^1.15.2",
+    "grunt": "^1.0.1",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-istanbul": "^0.7.0",
     "grunt-jasmine-node": "^0.3.1",
@@ -46,6 +46,9 @@
     "load-grunt-config": "^0.19.2",
     "temp": "^0.8.1",
     "xml2js": "^0.4.16"
+  },
+  "peerDependencies" : {
+    "grunt": ">=0.4.5"
   },
   "publishConfig": {
     "registry": "http://repo.digital.gov.uk/nexus/content/repositories/npm/"
