MGS-1597 Removing doctor usage

--- a/config.yaml
+++ b/config.yaml
@@ -15,5 +15,5 @@ sitemaps:
     - STATUS
   exclude_slugs:
     - search
-doctor:
-    url: http://localhost:6573/
+amphora:
+  endpoint: http://localhost:8093/amphora/
