MGS-1075 Remove prepublish and postpublish scripts.
This scripts run during 'npm install' (as well as npm publish),
which was not the intended behaviour.

--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "grunt test",
-    "postshrinkwrap": ".bin/sealant",
-    "prepublish": "mkdir -p out && cp npm-shrinkwrap.json out/shrinkwrap.json && npm shrinkwrap",
-    "postpublish": "cp out/shrinkwrap.json npm-shrinkwrap.json"
+    "postshrinkwrap": ".bin/sealant"
   },
   "author": {
     "name": "mygov.scot team",
