--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "grunt-jasmine-node": "^0.3.1",
     "grunt-sonar-runner": "^2.4.7",
     "load-grunt-config": "^0.19.2",
+    "mockery": "^2.0.0",
     "sealant": "0.0.2",
     "temp": "^0.8.1",
     "xml2js": "^0.4.16"
